--- a/foc.html
+++ b/foc.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mws.css">
-    <title>Microwave Systems</title>
+    <title>Fibre Optic Communications</title>
 
     <!---------------------Font h1--------------------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +35,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <!--------Navigation Bar---------------->
@@ -71,19 +69,20 @@
    
     <div class="container">
         <div class="column">
-            <h1>Waveguides and Microwave Components</h1>
-            <h2>Why Microwave?</h2>
-            <p>1. Increased bandwidth</p>
-            <p>2. Ability to use high gain, directive antenna</p>
-            <p>3. Low cost</p>
+            <h1>Introduction to Fibre Optic Communications</h1>
+            <h2></h2>
+            <p>The source generates an electrical signal, typically from a non-electric message signal.</p>
+            <p>A transmitter modifies a carrier to change the signal into a format that is appropriate for transmission across the medium.</p>
+            <p></p>
         </div>
         <div class="column">
-            <h1>Waveguides and Microwave Components</h1>
-            <h2>Transmission Line</h2>
-            <p>Wave propagates along the axis direction:</p>
-            <p>1. Transverse</p>
-            <p>2. Longitudinal</p>
+            <h1></h1>
+            <h2></h2>
+            <p></p>
+            <p></p>
+            <p></p>
         </div>
     </div>
+    
 </body>
 </html>
